Fix issue with html tag overflow with mobile

--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -1,7 +1,6 @@
 html {
   box-sizing: border-box;
   background-color: $color-scorpion;
-  overflow: hidden;
 }
 
 *,
